Use unsafe_unretained properties for iOS 4 support

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ EasyTableView.xcodeproj/xcuserdata/aleksey.xcuserdatad/xcdebugger/Breakpoints.xc
 EasyTableView.xcodeproj/xcuserdata/aleksey.xcuserdatad/xcschemes/EasyTableView.xcscheme
 
 EasyTableView.xcodeproj/xcuserdata/aleksey.xcuserdatad/xcschemes/xcschememanagement.plist
+
+EasyTableView.xcodeproj/xcuserdata/gil.xcuserdatad/xcschemes/EasyTableView.xcscheme
+
+EasyTableView.xcodeproj/xcuserdata/gil.xcuserdatad/xcschemes/xcschememanagement.plist
